--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -46,7 +46,7 @@
                         <a class="nav-link active" href="{% url 'quartos:mostruario'%}">Lista de Quartos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Reserva</a>
+                        <a class="nav-link active" href="#">Reservas</a>
                     </li>
                     <li class="nav-item me-2">
                         <a class="nav-link active" href="#">Relatórios</a>
