--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Master</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -27,7 +27,7 @@
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light border-bottom border-1 border p-3">
-        <div class="container col-10 d-flex justify-content-between align-items-center">
+        <div class="container d-flex justify-content-between align-items-center">
             <!-- Imagem à esquerda -->
             <a href="#" class="nav-link">
                 <!-- <img class="border border-1 border-primary" src="casa.png" style="width: 30px;"> -->
@@ -43,27 +43,27 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'quartos:mostruario'%}">Lista de Quartos</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="#">Reservas</a>
                     </li>
-                    <li class="nav-item me-2">
-                        <a class="nav-link active" href="#">Relatórios</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Quartos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">
-                            <button class="btn btn-dark btn-md" type="button" style="padding: 8px 30px 8px 30px; border-radius: 0px;">Login</button>
+                        <a class="nav-link" href="#">Cadastros</a>
+                    </li>
+                    </li>
+                    <li class="nav-item me-2">
+                        <a class="nav-link" href="#">Relatórios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url 'autenticacao:login' %}">
+                            <button class="btn btn-dark btn-sm" type="button" style="padding: 8px 30px 8px 30px; border-radius: 0px;">Login</button>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-
-
-
     {% block conteudo %}
     {% endblock %}
     
