--- a/reservas/templates/lista_reservas.html
+++ b/reservas/templates/lista_reservas.html
@@ -1,1 +1,19 @@
-luasnsajdhga
+{% extends 'master.html' %}
+{% block conteudo %}
+
+    <div class="container text-left mt-4">
+        <h1>Reservas</h1>
+        
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
+        <script>
+            flatpickr("#datepicker", {
+                dateFormat: "d/m/Y",
+                disableMobile: true, // Impede a abertura do calendário nativo no celular
+                locale: "pt"
+            });
+        </script>
+    
+{% endblock %}
