--- a/reservas/templates/lista_reservas.html
+++ b/reservas/templates/lista_reservas.html
@@ -1,19 +1,32 @@
 {% extends 'master.html' %}
+{% load static %}
 {% block conteudo %}
 
-    <div class="container text-left mt-4">
-        <h1>Reservas</h1>
-        
-        
+    <div class="container col-9 text-left mt-4">
+        <h1 class="display-weight-bold">Reservas</h1>
+        <hr class="mt-2 mb-3 border border-info">
+
+        <div class="">
+            <div>
+                
+            </div>
+        </div>
+
+        <div class="form-grop row align-items-center">
+            <div class="col-auto">
+                <img src='{% static "img/search.png" %}' width="20" height="20px" alt="Pequisar">
+                <label for="txtDatepicker" class="col-form-label">Pesquisar por data</label>
+            </div>
+            <div class="col-3">
+                <input type="text" class="form-control" id="txtDatepicker" placeholder="Selecione uma data" value="{{ query }}" >
+            </div>
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
         <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
-        <script>
-            flatpickr("#datepicker", {
-                dateFormat: "d/m/Y",
-                disableMobile: true, // Impede a abertura do calendário nativo no celular
-                locale: "pt"
-            });
-        </script>
+
+        <!-- Carregando o statico do calendario -->
+        <script src="{% static "js/flatpickr.js" %}"></script>
     
 {% endblock %}
