--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -1,7 +1,8 @@
 {% extends 'master.html' %}
+{% load static %}
 {% block conteudo %}
 
-    <div class="container text-center mt-4">
+    <div class="container text-center mt-5">
         <div class="row">
             <h1>Login</h1>
             <p>Faça seu login para começar a gerenciar o Hotel!</p>
@@ -11,7 +12,7 @@
                 <form class=" p-4 rounded bg-transparent">
                     <div class="mb-3 text-start">
                         <label for="staticEmail2" class="form-label">Nome</label>
-                        <input type="text" readonly class="form-control border border-1 border-dark gestorii-input" id="staticEmail2" value="email@example.com">
+                        <input type="text" readonly class="form-control border border-1 border-dark gestorii-input" id="staticEmail2" placeholder="Insira seu email">
                     </div>
                     <div class="mb-3 text-start">
                         <label for="inputPassword2" class="form-label">Senha</label>
@@ -24,5 +25,13 @@
         <div class="row mt-4">
             <p>Ainda não tem uma conta? <a href="#">Inscreva-se aqui</a></p>
         </div>
-    
+
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
+        
+        <!-- Carregando o statico do calendario -->
+    <script src="{% static "js/flatpickr.js" %}"></script>
 {% endblock %}    
