--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Reservas</a>
+                        <a class="nav-link active" href="{% url 'reservas:lista_reservas'%}">Reservas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Quartos</a>
