ultimo commit da madrugada!

--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -55,9 +55,9 @@
                     <li class="nav-item me-2">
                         <a class="nav-link" href="#">Relatórios</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'autenticacao:login' %}">
-                            <button class="btn btn-dark btn-sm" type="button" style="padding: 8px 30px 8px 30px; border-radius: 0px;">Login</button>
+                    <li class="nav-item ">
+                        <a href="{% url 'autenticacao:login' %}">
+                            <button class="btn btn-dark btn-sm shadow" type="button" style="padding: 10px 30px 10px 30px; border-radius: 0px;">Login</button>
                         </a>
                     </li>
                 </ul>
