Aquele nao foi o ultimo commit da madrugada kkkkkk

--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -12,7 +12,7 @@
                 <form class=" p-4 rounded bg-transparent">
                     <div class="mb-3 text-start">
                         <label for="staticEmail2" class="form-label">Nome</label>
-                        <input type="text" readonly class="form-control border border-1 border-dark gestorii-input" id="staticEmail2" placeholder="Insira seu email">
+                        <input type="text" class="form-control border border-1 border-dark gestorii-input" id="staticEmail2" placeholder="Insira seu email">
                     </div>
                     <div class="mb-3 text-start">
                         <label for="inputPassword2" class="form-label">Senha</label>
