--- a/reservas/templates/lista_reservas.html
+++ b/reservas/templates/lista_reservas.html
@@ -17,20 +17,9 @@
             <div class="col d-flex align-items-center">
                 <img src='{% static "img/search.png" %}' width="20" height="20" alt="Pesquisar">
                 <label for="txtDatepicker" class="col-form-label ms-2">Pesquisar data</label>
-                <input type="text" class="form-control ms-2" id="txtDatepicker" placeholder="Selecione uma data" value="{{ query }}" size="20">
+                <input type="text" class="form-control ms-2" id="txtDatepicker" placeholder="Selecione uma data" value="{{ query }}">
             </div>
         </div>
         
-    </div>  
-        
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
-    
-    <!-- Carregando o statico do calendario -->
-    <script src="{% static "js/flatpickr.js" %}"></script>
-    
-    
-    
+    </div>    
 {% endblock %}
