--- a/reservas/templates/lista_reservas.html
+++ b/reservas/templates/lista_reservas.html
@@ -2,9 +2,8 @@
 {% load static %}
 {% block conteudo %}
 
-    <div class="container col-9 mt-5">
+    <div class="container col-9 mt-2 p-4 ">
         <h1 class="display-weight-bold">Reservas</h1>
-        <hr class="mt-2 mb-3 border border-info">
 
         
         <div class="form-group row p-2 d-flex align-items-center">
@@ -14,12 +13,66 @@
             </div>
         
             <!-- Div alinhada à direita -->
-            <div class="col d-flex align-items-center">
+            <div class="col-8 d-flex align-items-center justify-content-end">
                 <img src='{% static "img/search.png" %}' width="20" height="20" alt="Pesquisar">
                 <label for="txtDatepicker" class="col-form-label ms-2">Pesquisar data</label>
-                <input type="text" class="form-control ms-2" id="txtDatepicker" placeholder="Selecione uma data" value="{{ query }}">
+                <input type="text" class="form-control ms-2" id="txtDatepicker" placeholder="Selecione uma data" value="{{ query }}" style="width: 150px;">
             </div>
         </div>
-        
+
+        <!-- Essa parte tem que ir pra uma partial, ou melhor block conteudo -->
+        <div class="mt-3 container w-75 p-4 d-flex align-items-center">
+            <form class="row g-3">
+                <div class="col-md-3">
+                  <label for="inputEmail4" class="form-label">Email</label>
+                  <input type="email" class="form-control shadow" id="inputEmail4" style="height: 132px;">
+                </div>
+                <div class="col-md-9 mb-3">
+                    <div class="row g-2">
+                        <div class="col-md-6">
+                            <label for="inputPassword4" class="form-label">Password</label>
+                            <input type="password" class="form-control shadow" id="inputPassword4">
+                            <br>
+                            <label for="inputPassword4" class="form-label">Password</label>
+                            <input type="password" class="form-control shadow" id="inputPassword4">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputPassword4" class="form-label">Password</label>
+                            <input type="password" class="form-control shadow" id="inputPassword4">
+                            <br>
+                            <label for="inputPassword4" class="form-label">Password</label>
+                            <input type="password" class="form-control shadow" id="inputPassword4">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <label for="inputCity" class="form-label">Check-in</label>
+                    <input type="text" class="form-select ms-2 shadow" id="txtDatepicker" placeholder="Selecione uma data" value="{{ query }}"">
+                </div>
+                <div class="col-md-5">
+                    <label for="inputState" class="form-label">Check-out</label>
+                    <input type="text" class="form-select ms-2 shadow" id="txtDatepicker" placeholder="Selecione uma data" value="{{ query }}"">
+                  <!-- <select id="inputState" class="form-select">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                  </select> -->
+                </div>
+                <div class="col-md-2">
+                  <label for="inputZip" class="form-label">Zip</label>
+                  <input type="text" class="form-control shadow" id="inputZip">
+                </div>
+                <div class="col-12">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label" for="gridCheck">
+                      Check me out
+                    </label>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn btn-primary">Sign in</button>
+                </div>
+              </form>
+        </div>
     </div>    
 {% endblock %}
