--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% block conteudo %}
 
-    <div class="container text-center mt-5">
+    <div class="container text-center mt-2 p-4">
         <div class="row">
             <h1>Login</h1>
             <p>Faça seu login para começar a gerenciar o Hotel!</p>
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <div class="container text-center formlogin">
+            <div class="container text-center formlogin w-50">
                 <form class=" p-4 rounded bg-transparent">
                     <div class="mb-3 text-start">
                         <label for="staticEmail2" class="form-label">Nome</label>
@@ -22,9 +22,13 @@
                 </form>
             </div>
         </div>
-        <div class="row mt-4">
+        <div class="row mt-4 mb-5">
             <p>Ainda não tem uma conta? <a href="#">Inscreva-se aqui</a></p>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
 
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
