--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -6,27 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .logo{
-            width: 158px; 
-            height: 35px; 
-            color: rgb(69, 68, 68);
-            background-color: rgb(195, 209, 236);
-            border-radius: 5px;
-            text-align: center;
-            padding-top: 5px;   
-        }
-        .formlogin{
-            width: 100vh;
-        }
-        .gestorii-input{
-           border-radius: 0; 
-        }
-    </style>
+
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light border-bottom border-1 border p-3">
+    <nav class="navbar sticky-top navbar-expand-lg bg-light border-bottom border-1 border p-3">
         <div class="container d-flex justify-content-between align-items-center">
             <!-- Imagem à esquerda -->
             <a href="#" class="nav-link">
@@ -65,15 +50,17 @@
             </div>
         </div>
     </nav>
-    {% block conteudo %}
-    
-    {% endblock %}
+    <div class="fade-in mt-3" id="minhaDiv"">
+        {% block conteudo %}
+        {% endblock %}
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
     
     <!-- Carregando o statico do calendario -->
     <script src="{% static "js/flatpickr.js" %}"></script>
+    <script src="{% static "js/suavidade.js" %}"></script>
     
 </body>
 </html>
