--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -12,13 +12,13 @@
                 <form class=" p-4 rounded bg-transparent">
                     <div class="mb-3 text-start">
                         <label for="staticEmail2" class="form-label">Nome</label>
-                        <input type="text" class="form-control border border-1 border-dark gestorii-input" id="staticEmail2" placeholder="Insira seu email">
+                        <input type="text" class="form-control border border-1 border-dark gestorii-input shadow" id="staticEmail2" placeholder="Insira seu email">
                     </div>
                     <div class="mb-3 text-start">
                         <label for="inputPassword2" class="form-label">Senha</label>
-                        <input type="password" class="form-control border border-1 border-dark gestorii-input" id="inputPassword2" placeholder="Senha">
+                        <input type="password" class="form-control border border-1 border-dark gestorii-input shadow" id="inputPassword2" placeholder="Senha">
                     </div>
-                    <button type="submit" class="btn btn-primary w-100 gestorii-input" >Entrar</button>
+                    <button type="submit" class="btn btn-primary w-100 gestorii-input shadow mt-2" >Entrar</button>
                 </form>
             </div>
         </div>
