--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -10,11 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-light border-bottom border-1 border p-3">
+<body  style="background-color: rgb(255, 255, 255);" >
+    <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3" style="background-color: rgba(240, 240, 240);">
         <div class="container d-flex justify-content-between align-items-center">
             <!-- Imagem à esquerda -->
-            <a href="#" class="nav-link">
+            <a href="{% url 'reservas:lista_reservas'%}" class="nav-link">
                 <!-- <img class="border border-1 border-primary" src="casa.png" style="width: 30px;"> -->
                 <div class="logo">Logo da Companhia</div>
             </a>
@@ -50,7 +50,7 @@
             </div>
         </div>
     </nav>
-    <div class="fade-in mt-3" id="minhaDiv"">
+    <div class="fade-in" id="minhaDiv">
         {% block conteudo %}
         {% endblock %}
     </div>
