--- a/reservas/templates/lista_reservas.html
+++ b/reservas/templates/lista_reservas.html
@@ -3,8 +3,7 @@
 {% block conteudo %}
 
 <div class="container mt-2 p-4 w-75">
-  <!-- <h1 class="display-weight-bold">Reservas</h1>     -->
-  <h1 class="display-weight-bold">{{ nome }}</h1>    
+  <h1 class="display-weight-bold">Reservas</h1>    
   <div class="form-group row p-2 d-flex align-items-center">
   <!-- Div alinhada à esquerda -->
   <div class="col-4 d-flex align-items-center">
