--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body  style="background-color: rgb(255, 255, 255);" >
+<body>
     <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3" style="background-color: rgba(240, 240, 240);">
         <div class="container d-flex justify-content-between align-items-center">
             <!-- Imagem à esquerda -->
