--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -4,7 +4,7 @@
 
     <div class="container text-center mt-2 p-4">
         <div class="row">
-            <h1>Login - Branch caca</h1>
+            <h1>Login</h1>
             <p>Faça seu login para começar a gerenciar o Hotel!</p>
             <!-- {% if messages%}
             <ul class="messages">
