--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -29,7 +29,7 @@
                 <ul class="navbar-nav">
                     
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'reservas:lista_reservas'%}">Reservas</a>
+                        <a class="nav-link" href="{% url 'reservas:lista_reservas'%}">Reservas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Quartos</a>
