--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -8,13 +8,27 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/toastr.min.css' %}">
+    
+    <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
+    <!-- <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
+    <!-- <link rel="stylesheet" href="{% static 'css/crud.css' %}"> -->
 
+
+    <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/toastr.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+            
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
+    
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3" style="background-color: rgba(240, 240, 240);">
         <div class="container d-flex justify-content-between align-items-center">
             <!-- Imagem à esquerda -->
-            <a href="{% url 'reservas:lista_reservas'%}" class="nav-link">
+            <a href="#" class="nav-link">
                 <!-- <img class="border border-1 border-primary" src="casa.png" style="width: 30px;"> -->
                 <div class="logo">Logo da Companhia</div>
             </a>
@@ -29,7 +43,7 @@
                 <ul class="navbar-nav">
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'reservas:lista_reservas'%}">Reservas</a>
+                        <a class="nav-link" href="#">Reservas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Quartos</a>
@@ -53,11 +67,45 @@
     <div class="fade-in" id="minhaDiv">
         {% block conteudo %}
         {% endblock %}
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
+    </div>     
+    <script>
+        $(document).ready(function() {
+            toastr.options = {
+                "debug": false,
+                "newestOnTop": true,
+                "progressBar": false,
+                "positionClass": "toast-bottom-left",
+                "preventDuplicates": false,
+                "onclick": null,
+                "showDuration": "300",
+                "timeOut": "3000",
+                "extendedTimeOut": "300",
+                "showEasing": "swing",
+                "hideEasing": "linear",
+                "showMethod": "fadeIn",
+                "hideMethod": "fadeOut"
+            };
     
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                        toastr.error("{{ message }}", "Erro");
+                    {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                        toastr.success("{{ message }}", "Sucesso 😉");
+                    {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+                        toastr.warning("{{ message }}", "Aviso");
+                    {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                        toastr.info("{{ message }}", "Atenção");
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+    
+            //sobre
+            $('#btnSobre').click(function() {
+                $('#jnlSobre').modal('show');
+            });
+        });
+    </script>
     <!-- Carregando o statico do calendario -->
     <script src="{% static "js/flatpickr.js" %}"></script>
     <script src="{% static "js/suavidade.js" %}"></script>
