--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -18,13 +18,18 @@
             <div class="container text-center formlogin w-50">
                 <form class=" p-4 rounded bg-transparent" action="{% url 'autenticacao:login' %}" method="POST">
                     {% csrf_token %}
-                    <div class="mb-3 text-start">
-                        <label for="staticEmail2" class="form-label">Nome</label>
-                        <input name="txtNome" type="text" class="form-control border border-1 border-dark gestorii-input shadow" id="staticEmail2" placeholder="Insira seu email">
+                    <div class="mb-3 text-start form-group">
+                        <label for="txtEmail" class="form-label">Nome</label>
+                        <input type="email" class="form-control border border-1 border-dark gestorii-input shadow" id="txtEmail" name="txtEmail" placeholder="Insira seu email">
+                        <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
+                    </div>  
+                    <div class="mb-3 text-start form-group hidden-group" id="divSenha">
+                        <label for="txtSenha" class="form-label">Senha</label>
+                        <input type="password" class="form-control border border-1 border-dark gestorii-input shadow" id="txtSenha" name="txtSenha" autocomplete="new-password">
                     </div>
-                    <div class="mb-3 text-start">
-                        <label for="inputPassword2" class="form-label">Senha</label>
-                        <input type="password" class="form-control border border-1 border-dark gestorii-input shadow" id="inputPassword2" placeholder="Senha">
+                    <div class="mb-3 text-start form-group hidden-group" hidden id="divPerfil">
+                        <label for="slcPerfil">Perfil</label>
+                        <select class="form-control border border-1 border-dark gestorii-input shadow" id="slcPerfil" name="slcPerfil" required></select>
                     </div>
                     <button type="submit" class="btn btn-primary w-100 gestorii-input shadow mt-2" >Entrar</button>
                 </form>
@@ -40,7 +45,46 @@
 
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script>
+            $(document).ready(function() {
+                $('#txtEmail').on('input', function() {
+                    var email = $(this).val();
+                    $('#divPerfil').addClass('hidden-group');
+                    $('#divSenha').addClass('hidden-group');
+                    $('#slcPerfil').empty();
+                    $('#divEmailError').addClass('fade-in').removeClass('show');
+
+                    if (email.length > 0) {
+                        $.ajax({
+                            url: "{% url 'autenticacao:get_perfis' %}",
+                            data: {'email': email},
+                            success: function(data) {
+                                if (data.usuario_existe) {
+                                    if (data.perfis.length > 0) {
+                                        $('#slcPerfil').empty();
+                                        data.perfis.forEach(function(perfil) {
+                                            $('#slcPerfil').append(new Option(perfil.nome, perfil.id));
+                                        });
+                                        $('#divPerfil').removeClass('hidden-group');
+                                        $('#divSenha').removeClass('hidden-group');
+                                        $('#divEmailError').text('Email Disponível!').removeClass('fade-in').addClass('show');
+                                    } else {
+                                        toastr.error("Nenhum perfil encontrado para este e-mail.", "Erro");
+                                    }
+                                } else {
+                                    $('#divEmailError').text('Email está indisponível').addClass('show');
+                                }
+                            }
+                        });
+                    }
+                });
+
+                $('#btnEsqueciSenha').click(function(event) {
+                    event.preventDefault();
+                    toastr.info('Se você esqueceu sua senha contate o administrador do sistema.');
+                    window.location.href = "http://127.0.0.1:8000/novaSenha/";
+                });
+            });
+        </script>
         
-        <!-- Carregando o statico do calendario -->
-        <script src="{% static "js/flatpickr.js" %}"></script>
 {% endblock %}    
