--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -18,6 +18,8 @@
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/toastr.min.js' %}"></script>
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
             
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
@@ -27,41 +29,68 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3" style="background-color: rgba(240, 240, 240);">
         <div class="container d-flex justify-content-between align-items-center">
-            <!-- Imagem à esquerda -->
-            <a href="#" class="nav-link">
-                <!-- <img class="border border-1 border-primary" src="casa.png" style="width: 30px;"> -->
-                <div class="logo">Logo da Companhia</div>
-            </a>
-    
-            <!-- Botão do menu (visível apenas em telas pequenas) -->
-            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <!-- Itens do menu alinhados à direita -->
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Reservas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Quartos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Cadastros</a>
-                    </li>
-                    </li>
-                    <li class="nav-item me-2">
-                        <a class="nav-link" href="#">Relatórios</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a href="{% url 'autenticacao:login' %}">
-                            <button class="btn btn-dark btn-sm shadow" type="button" style="padding: 10px 30px 10px 30px; border-radius: 0px;">Login</button>
-                        </a>
-                    </li>
-                </ul>
+            {% if request.session.id_perfil != None %}
+            <div class="fade-in_sair" id="sair"></div>
+                <!-- Imagem à esquerda -->
+                <a href="#" class="nav-link">
+                    <img src='{% static "img/logo.jpg" %}'style="width: 150px;">
+                </a>
+        
+                <!-- Botão do menu (visível apenas em telas pequenas) -->
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        
+                <!-- Itens do menu alinhados à direita -->
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Reservas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Quartos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Cadastros</a>
+                        </li>
+                        </li>
+                        <li class="nav-item me-2">
+                            <a class="nav-link" href="#">Relatórios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'autenticacao:logout' %}">
+                                <button class="btn btn-sm btn-danger shadow" type="button" style="padding: 10px 30px 10px 30px; border-radius: 0px;" >Sair</button>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+            {% else %}
+            <div class="fade-in_sair" id="sair"></div>
+                <!-- Imagem à esquerda -->
+                <a href="#" class="nav-link">
+                    <img src='{% static "img/logo.jpg" %}'style="width: 150px;">
+                </a>
+        
+                <!-- Botão do menu (visível apenas em telas pequenas) -->
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        
+                <!-- Itens do menu alinhados à direita -->
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Reservas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Quartos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            {% endif %}
+                    
         </div>
     </nav>
     <div class="fade-in" id="minhaDiv">
@@ -106,9 +135,9 @@
             });
         });
     </script>
+    <script src="{% static "js/suavidade.js" %}"></script>
     <!-- Carregando o statico do calendario -->
     <script src="{% static "js/flatpickr.js" %}"></script>
-    <script src="{% static "js/suavidade.js" %}"></script>
     
 </body>
 </html>
