--- a/resources/static/css/style.css
+++ b/resources/static/css/style.css
@@ -19,10 +19,19 @@
     transform: translateY(0px);
     transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
 }
+.fade-in_sair {
+    opacity: 0;
+    transform: translateX(20px);
+    transition: opacity 2s ease-in-out, transform 2s ease-in-out;
+}
 
 .fade-in.show {
     opacity: 1;
     transform: translateY(0);
+}
+.fade-in.show_sair {
+    opacity: 1;
+    transform: translateX(0);
 }
 .toast-succes{
     color: red;
