Login pronta meus senhores!

--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -33,7 +33,7 @@
             <div class="fade-in_sair" id="sair"></div>
                 <!-- Imagem à esquerda -->
                 <a href="#" class="nav-link">
-                    <img src='{% static "img/logo.jpg" %}'style="width: 150px;">
+                    <img src='{% static "img/logoGHpreta.png" %}'style="width: 150px;">
                 </a>
         
                 <!-- Botão do menu (visível apenas em telas pequenas) -->
@@ -59,7 +59,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="{% url 'autenticacao:logout' %}">
-                                <button class="btn btn-sm btn-danger shadow" type="button" style="padding: 10px 30px 10px 30px; border-radius: 0px;" >Sair</button>
+                                <button class="btn btn-sm btn-danger shadow" type="button" style="padding: 8px 18px 8px 18px; border-radius: 2px;" >Sair</button>
                             </a>
                         </li>
                     </ul>
@@ -69,7 +69,7 @@
             <div class="fade-in_sair" id="sair"></div>
                 <!-- Imagem à esquerda -->
                 <a href="#" class="nav-link">
-                    <img src='{% static "img/logo.jpg" %}'style="width: 150px;">
+                    <img src='{% static "img/logoGHpreta.png" %}'style="width: 150px;">
                 </a>
         
                 <!-- Botão do menu (visível apenas em telas pequenas) -->
