--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -27,7 +27,7 @@
     
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3" style="background-color: rgba(240, 240, 240);">
+    <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3" style="background-color: #c6c6c6;">
         <div class="container d-flex justify-content-between align-items-center">
             {% if request.session.id_perfil != None %}
             <div class="fade-in_sair" id="sair"></div>
