--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -29,7 +29,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3" style="background-color: #c6c6c6;">
         <div class="container d-flex justify-content-between align-items-center">
-            {% if request.session.id_perfil != None %}
+            {% if request.session.perfil_atual == 'Administrador' %}
             <div class="fade-in_sair" id="sair"></div>
                 <!-- Imagem à esquerda -->
                 <a href="#" class="nav-link">
@@ -53,6 +53,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Cadastros</a>
                         </li>
+                        <li class="nav-item">
+                                <a class="nav-link" href="#">Criar Reservas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Gerenciar Quartos</a>
+                            </li>
                         </li>
                         <li class="nav-item me-2">
                             <a class="nav-link" href="#">Relatórios</a>
@@ -66,29 +72,65 @@
                 </div>
             </div>
             {% else %}
-            <div class="fade-in_sair" id="sair"></div>
-                <!-- Imagem à esquerda -->
-                <a href="#" class="nav-link">
-                    <img src='{% static "img/logoGHpreta.png" %}'style="width: 150px;">
-                </a>
-        
-                <!-- Botão do menu (visível apenas em telas pequenas) -->
-                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-        
-                <!-- Itens do menu alinhados à direita -->
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Reservas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Quartos</a>
-                        </li>
-                    </ul>
+                {% if request.session.perfil_atual == 'Funcionario'%}
+                <div class="fade-in_sair" id="sair"></div>
+                    <!-- Imagem à esquerda -->
+                    <a href="#" class="nav-link">
+                        <img src='{% static "img/logoGHpreta.png" %}'style="width: 150px;">
+                    </a>
+            
+                    <!-- Botão do menu (visível apenas em telas pequenas) -->
+                    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+            
+                    <!-- Itens do menu alinhados à direita -->
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Criar Reservas</a>
+                            </li>
+                            <li class="nav-item me-2">
+                                <a class="nav-link" href="#">Gerenciar Quartos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{% url 'autenticacao:logout' %}">
+                                    <button class="btn btn-sm btn-danger shadow" type="button" style="padding: 8px 18px 8px 18px; border-radius: 2px;">Sair</button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
+                {% else %}
+                <div class="fade-in_sair" id="sair"></div>
+                    <!-- Imagem à esquerda -->
+                    <a href="#" class="nav-link">
+                        <img src='{% static "img/logoGHpreta.png" %}'style="width: 150px;">
+                    </a>
+            
+                    <!-- Botão do menu (visível apenas em telas pequenas) -->
+                    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+            
+                    <!-- Itens do menu alinhados à direita -->
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Pacotes</a>
+                            </li>
+                            <li class="nav-item me-2">
+                                <a class="nav-link" href="#">Contato</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{% url 'autenticacao:login' %}">
+                                    <button class="btn btn-sm shadow" type="button" style="padding: 8px 18px 8px 18px; border-radius: 2px; background-color:rgb(30, 30, 30);color:white;">Login</button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                {% endif %}
             {% endif %}
                     
         </div>
