--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -4,7 +4,8 @@
 
     <div class="container text-center mt-2 p-4">
         <div class="row">
-            <h1>Login</h1>
+        
+            <h1 class="display-5 font-weight-bold mb-3">Login</h1>
             <p>Faça seu login para começar a gerenciar o Hotel!</p>
             <!-- {% if messages%}
             <ul class="messages">
@@ -35,9 +36,9 @@
                 </form>
             </div>
         </div>
-        <div class="row mt-4 mb-5">
+        {% comment %} <div class="row mt-4 mb-5">
             <p>Ainda não tem uma conta? <a href="#">Inscreva-se aqui</a></p>
-        </div>
+        </div> {% endcomment %}
         <br>
         <br>
         <br>
