--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/toastr.min.css' %}">
     
     <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
@@ -28,6 +28,7 @@
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3 shadow" style="background-color: #c6c6c6;">
+    {% comment %} <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3 shadow" style="background-color:rgb(171, 250, 165);"> {% endcomment %}
         <div class="container d-flex justify-content-between align-items-center">
             {% if request.session.perfil_atual == 'Administrador' %}
             <div class="fade-in_sair" id="sair"></div>
@@ -135,6 +136,7 @@
                     
         </div>
     </nav>
+    
     <div class="fade-in" id="minhaDiv">
         {% block conteudo %}
         {% endblock %}
