--- a/reservas/templates/index.html
+++ b/reservas/templates/index.html
@@ -1,7 +1,6 @@
 {% extends 'master.html' %}
 {% load static %}
 {% block conteudo %}
-   {% for reserva in reserva_lista %}
       <!-- Titulo -->
       <div class="container pt-3 w-100">
          <h1 class="display-5 font-weight-bold">Reservas</h1><hr>  
@@ -12,7 +11,6 @@
             <div class="col-8">
                <h4 class="">QTD Hospedes: 11</h4>
             </div>
-
             <!-- Pesquisa -->
             <div class="col-4 d-flex align-items-center justify-content-end">
                <div class="row">
@@ -27,105 +25,112 @@
                </div>
             </div>
          </div>
-         <!-- Reserva -->
-         <div class="container d-flex align-items-center">
-            <div class="mt-3 d-flex align-items-center">
-               <div class="row">
-               
-                  <div class="col-9">
-                     <div class="row">
-                        <div class="col-8">
-                           <label for="inputPassword4" class="form-label">Nome:</label>
-                           <input type="text" class="form-control shadow" id="inputPassword4" readonly value="{{reserva.id_hospede.nome}}">
-                        </div>
-                        <div class="col-4">
-                           <label for="inputPassword4" class="form-label">ID Reserva</label>
-                           <input type="text" class="form-control shadow" id="inputPassword4" readonly value="{{reserva.id}}">
-                        </div>
-                     </div>
-                     <div class="row">
-                        <div class="col-6">
-                           <label for="inputPassword4" class="form-label mt-3">CPF:</label>
-                           <input type="text" class="form-control shadow" id="inputPassword4" readonly value="{{reserva.id_hospede.cpf}}">
-                        </div>
-                        <div class="col-6">
-                           <label for="inputPassword4" class="form-label mt-3">Telefone</label>
-                           <input type="text" class="form-control shadow" id="inputPassword4" readonly value="{{reserva.id_hospede.telefone}}">
-                        </div>
-                     </div>
-                     <div class="row mt-3">
-                        <div class="col-5">
-                           <label for="dateCheckin" class="form-label">Check-in</label>
-                           <input name="dateCheckin" type="text" class="form-select shadow" id="txtDatepicker" placeholder="Selecione uma data" value="">
-                        </div>
-                        <div class="col-5">
-                           <label for="dateCheckout" class="form-label">Check-out</label>
-                           <input name="dateCheckout" type="text" class="form-select shadow" id="txtDatepicker" placeholder="Selecione uma data" value="">
-                        </div>
-                        <div class="col-2">
-                           <label for="inputZip" class="form-label">Diárias</label>
-                           <input type="text" class="form-control shadow" id="inputZip">
-                        </div>
-                     </div>
-                     <div class="row mt-3">
-                        <fieldset>
-                           <legend>Comanda</legend>
-                           <div class="container text-center h-75">
-                              <table class="table table-hover">
-                                 <thead>
-                                    <td>Produto</td>
-                                    <td>Qtd</td>
-                                    <td>Valor</td>
-                                    <td>Data
-                                 </thead>
-      
-                                 <tr>
-                                    <td>2</td>
-                                    <td>4</td>
-                                    <td>6</td>
-                                    <td>8</td>
-                                 </tr>
-      
-                                 <tr>
-                                    <td>2</td>
-                                    <td>4</td>
-                                    <td>6</td>
-                                    <td>8</td>
-                                 </tr>
-                                 <tr>
-                                    <td>2</td>
-                                    <td>4</td>
-                                    <td>6</td>
-                                    <td>8</td>
-                                 </tr>
-                                 <tr>
-                                    <td colspan="4" class="text-end"><h4>Total: 3213,00 R$</h2></td>
-                                 </tr>
-                              </table>
+         {% for reserva in reserva_lista %}
+            <!-- Reserva -->
+            {% comment %} <div class="container d-flex align-items-center"> {% endcomment %}
+               <div class="mt-3 d-flex align-items-center">
+                  <div class="row">
+                     <div class="col-9">
+                        <div class="row">
+                           <div class="col-8">
+                              <label for="txtNome_{{reserva.id}}" class="form-label">Nome:</label>
+                              <input type="text" class="form-control shadow" id="txtNome_{{reserva.id}}" readonly value="{{reserva.id_hospede.nome}}">
                            </div>
-                        </fieldset>
+                           <div class="col-4">
+                              <label for="id_{{reserva.id}}" class="form-label">ID Reserva</label>
+                              <input type="text" class="form-control shadow" id="id_{{reserva.id}}" readonly value="{{reserva.id}}">
+                           </div>
+                        </div>
+                        <div class="row">
+                           <div class="col-6">
+                              <label for="txtCpf_{{reserva.id}}" class="form-label mt-3">CPF:</label>
+                              <input type="text" class="form-control shadow" id="txtCpf_{{reserva.id}}" readonly value="{{reserva.id_hospede.cpf}}">
+                           </div>
+                           <div class="col-6">
+                              <label for="txtTelefone_{{reserva.id}}" class="form-label mt-3">Telefone</label>
+                              <input type="text" class="form-control shadow" id="txtTelefone_{{reserva.id}}" readonly value="{{reserva.id_hospede.telefone}}">
+                           </div>
+                        </div>
+                        <div class="row mt-3">
+                           <div class="col-5">
+                              <label for="dateCheckin" class="form-label">Check-in</label>
+                              <input name="dateCheckin" type="text" class="form-select shadow" id="txtDatepicker" placeholder="Selecione uma data" readonly value="{{reserva.check_in}}">
+                           </div>
+                           <div class="col-5">
+                              <label for="dateCheckout" class="form-label">Check-out</label>
+                              <input name="dateCheckout" type="text" class="form-select shadow" id="txtDatepicker" placeholder="Selecione uma data" readonly value="{{reserva.check_out}}">
+                           </div>
+                           <div class="col-2">
+                              <label for="inputZip" class="form-label">Diárias</label>
+                              <input type="text" class="form-control shadow" id="txtDiaria_">
+                           </div>
+                        </div>
                      </div>
-                  </div>
-
-                  <div class="col-3 text-white rounded p-3 azul">
-                     <h1 class="display-5 font-bold text-center">Quarto:</h1>
-                     <h1 class="display-5 font-weight-bold text-center">{{ reserva.num_quarto.num_quarto}}</h1>
-                     <div class="mt-3 border border-light p-4">
-                        <fieldset>
-                           <legend>Observações</legend>
-                           <p class="m-4 ">{{reserva.observacoes}}</p>
-                        </fieldset>
-                     </div>
-                  </div>
-                  <div class="col-12 d-flex">
-                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">Selecionar</label>
+                     <div class="col-3">
+                        <div class="text-white mt-3 mb-4 h-75 rounded azul">
+                           <!-- <div class="row">
+                           </div> -->
+                           <h1 class="display-5 font-bold text-center">Quarto: {{ reserva.num_quarto.num_quarto}}</h1>
+                           <hr>
+                           <div class="p-2 ">
+                              <fieldset>
+                                 <legend>Observações</legend>
+                                 <p class="m-4 justify-content-center">{{reserva.observacoes}}</p>
+                              </fieldset>
+                           </div>
+                        </div>
                      </div>
                   </div>
                </div>
-            </div>
-         </div>
+                     {% comment %} <div class="row mt-3">
+                           <fieldset>
+                              <legend>Comanda</legend>
+                              <div class="container text-center h-75">
+                                 <table class="table table-hover">
+                                    <thead>
+                                       <td>Produto</td>
+                                       <td>Qtd</td>
+                                       <td>Valor</td>
+                                       <td>Data
+                                    </thead>
+                                    <tr>
+                                       <td>2</td>
+                                       <td>4</td>
+                                       <td>6</td>
+                                       <td>8</td>
+                                    </tr>
+         
+                                    <tr>
+                                       <td>2</td>
+                                       <td>4</td>
+                                       <td>6</td>
+                                       <td>8</td>
+                                    </tr>
+                                    <tr>
+                                       <td>2</td>
+                                       <td>4</td>
+                                       <td>6</td>
+                                       <td>8</td>
+                                    </tr>
+                                    <tr>
+                                       <td colspan="4" class="text-end"><h4>Total: 3213,00 R$</h2></td>
+                                    </tr>
+                                 </table>
+                              </div>
+                           </fieldset>
+                        </div> {% endcomment %}
+
+                     
+
+                     {% comment %} <div class="row d-flex">
+                        <div class="form-check">
+                           <input class="form-check-input" type="checkbox" id="gridCheck">
+                           <label class="form-check-label" for="gridCheck">Selecionar</label>
+                        </div>
+                     </div> {% endcomment %}
+                  {% comment %} </div> {% endcomment %}
+               
+            {% comment %} </div> {% endcomment %}
+         {% endfor %}
       </div>
-   {% endfor %}
 {% endblock %}
