--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -2,90 +2,102 @@
 {% load static %}
 {% block conteudo %}
 
-    <div class="container text-center mt-2 p-4">
-        <div class="row">
-        
-            <h1 class="display-5 font-weight-bold mb-3">Login</h1>
-            <p>Faça seu login para começar a gerenciar o Hotel!</p>
-            <!-- {% if messages%}
-            <ul class="messages">
-                {% for message in messages %}
-                <li class="{{message.tags}}">{{ message }}</li>
-                {% endfor %}
-            </ul>
-            {%endif%} -->
-        </div>
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="container text-center formlogin w-50">
-                <form class=" p-4 rounded bg-transparent" action="{% url 'autenticacao:login' %}" method="POST">
-                    {% csrf_token %}
-                    <div class="text-start form-group">
-                        <label for="txtEmail" class="form-label">Nome</label>
-                        <input type="email" class="form-control border border-1 border-dark gestorii-input shadow" id="txtEmail" name="txtEmail" placeholder="Insira seu email">
-                        <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
-                    </div>  
-                    <div class="mb-5 text-start form-group hidden-group" id="divSenha">
-                        <label for="txtSenha" class="form-label">Senha</label>
-                        <input type="password" class="form-control border border-1 border-dark gestorii-input shadow" id="txtSenha" name="txtSenha" autocomplete="new-password">
-                    </div>
-                    <div class="mb-3 text-start form-group hidden-group" hidden id="divPerfil">
-                        <label for="slcPerfil">Perfil</label>
-                        <select class="form-control border border-1 border-dark gestorii-input shadow" id="slcPerfil" name="slcPerfil" required></select>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100 gestorii-input shadow mt-2" >Entrar</button>
-                </form>
-            </div>
-        </div>
-        {% comment %} <div class="row mt-4 mb-5">
-            <p>Ainda não tem uma conta? <a href="#">Inscreva-se aqui</a></p>
-        </div> {% endcomment %}
-        <br>
-        <br>
-        <br>
-        <br>
+<div class="fundo-login">
 
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script>
-            $(document).ready(function() {
-                $('#txtEmail').on('input', function() {
-                    var email = $(this).val();
-                    $('#divPerfil').addClass('hidden-group');
-                    $('#divSenha').addClass('hidden-group');
-                    $('#slcPerfil').empty();
-                    $('#divEmailError').addClass('fade-in').removeClass('show');
 
-                    if (email.length > 0) {
-                        $.ajax({
-                            url: "{% url 'autenticacao:get_perfis' %}",
-                            data: {'email': email},
-                            success: function(data) {
-                                if (data.usuario_existe) {
-                                    if (data.perfis.length > 0) {
-                                        $('#slcPerfil').empty();
-                                        data.perfis.forEach(function(perfil) {
-                                            $('#slcPerfil').append(new Option(perfil.nome, perfil.id));
-                                        });
-                                        $('#divPerfil').removeClass('hidden-group');
-                                        $('#divSenha').removeClass('hidden-group');
-                                        $('#divEmailError').text('Email Disponível!').addClass('show').css('color','green');
-                                    } else {
-                                        toastr.error("Nenhum perfil encontrado para este e-mail.", "Erro");
-                                    }
-                                } else {
-                                    $('#divEmailError').text('Email está indisponível').addClass('show').css('color','red');
-                                }
-                            }
-                        });
-                    }
-                });
+   <div class="container text-center mt-2 p-4">
+      <div class="row">
+         <h1 class="display-5 font-weight-bold mb-3">Login</h1>
+         <p>Faça seu login para começar a gerenciar o Hotel!</p>
+      </div>
+      <div class="d-flex justify-content-center align-items-center mb-5">
+         <div class="container text-center formlogin w-50">
+            <form class=" p-4 rounded bg-transparent" action="{% url 'autenticacao:login' %}" method="POST">
+               {% csrf_token %}
+               <div class="text-start form-group">
+                  <label for="txtEmail" class="form-label">Nome</label>
+                  <input type="email" class="form-control border border-1 border-dark gestorii-input shadow" id="txtEmail" name="txtEmail" placeholder="Insira seu email">
+                  <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
+               </div>  
+               <div class="mb-5 text-start form-group hidden-group" id="divSenha">
+                  <label for="txtSenha" class="form-label">Senha</label>
+                  <input type="password" class="form-control border border-1 border-dark gestorii-input shadow" id="txtSenha" name="txtSenha" autocomplete="new-password">
+               </div>
+               <div class="mb-3 text-start form-group hidden-group" hidden id="divPerfil">
+                  <label for="slcPerfil">Perfil</label>
+                  <select class="form-control border border-1 border-dark gestorii-input shadow" id="slcPerfil" name="slcPerfil" required></select>
+               </div>
+               <button type="submit" class="btn btn-primary w-100 gestorii-input shadow mt-2" >Entrar</button>
+            </form>
+         </div>
+      </div>
+      <a href="{% url 'autenticacao:esqueci_senha'%}">Esqueci a senha</a>
+   </div>
+   <footer id="rodape" class="text-light py-4 mt-5" style="background:rgb(66, 66, 66);">
+      <div class="container text-center">
+         <h5 class="fw-bold"><img src='{% static "img/Logo GestoriiHost Branca.png" %}'style="width: 150px;"> - Sistema de Gerenciamento de Hotelaria</h5>
+         
+         <!-- <button id="btnSobre" class="btn btn-outline-light btn-sm mt-2">Sobre</button> -->
 
-                $('#btnEsqueciSenha').click(function(event) {
-                    event.preventDefault();
-                    toastr.info('Se você esqueceu sua senha contate o administrador do sistema.');
-                    window.location.href = "http://127.0.0.1:8000/novaSenha/";
-                });
-            });
-        </script>
-        
+         <p class="mt-3 mb-1">
+               Este sistema está licenciado sob 
+               <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+                  Licença Creative Commons &copy; 4.0
+               </a> 
+               <img src="{% static 'img/creativecommons.png' %}" width="45" alt="Creative Commons">
+         </p>
+
+         <p class="mb-0">
+               Disponível para download em 
+               <a href="https://github.com/lur4n/gestoriihost" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+                  github.com/lur4n/gestoriihost
+               </a> 
+               <img src="{% static 'img/github.png' %}" width="18" alt="GitHub">
+         </p>
+      </div>
+   </footer>
+</div>
+
+<script>
+   $(document).ready(function() {
+         $('#txtEmail').on('input', function() {
+            var email = $(this).val();
+            $('#divPerfil').addClass('hidden-group');
+            $('#divSenha').addClass('hidden-group');
+            $('#slcPerfil').empty();
+            $('#divEmailError').addClass('fade-in').removeClass('show');
+
+            if (email.length > 0) {
+               $.ajax({
+                     url: "{% url 'autenticacao:get_perfis' %}",
+                     data: {'email': email},
+                     success: function(data) {
+                        if (data.usuario_existe) {
+                           if (data.perfis.length > 0) {
+                                 $('#slcPerfil').empty();
+                                 data.perfis.forEach(function(perfil) {
+                                    $('#slcPerfil').append(new Option(perfil.nome, perfil.id));
+                                 });
+                                 $('#divPerfil').removeClass('hidden-group');
+                                 $('#divSenha').removeClass('hidden-group');
+                                 $('#divEmailError').text('Email Disponível!').addClass('show').css('color','green');
+                           } else {
+                                 toastr.error("Nenhum perfil encontrado para este e-mail.", "Erro");
+                           }
+                        } else {
+                           $('#divEmailError').text('Email está indisponível').addClass('show').css('color','red');
+                        }
+                     }
+               });
+            }
+         });
+
+         $('#btnEsqueciSenha').click(function(event) {
+            event.preventDefault();
+            toastr.info('Se você esqueceu sua senha contate o administrador do sistema.');
+            window.location.href = "http://127.0.0.1:8000/novaSenha/";
+         });
+   });
+</script>
+
 {% endblock %}    
