--- a/cadastros/templates/criar_hospede.html
+++ b/cadastros/templates/criar_hospede.html
@@ -1,49 +1,57 @@
 {% extends 'master.html' %}
 {% load static %}
 {% block conteudo %}
+<!-- Titulo -->
+<div class="container pt-4">
+   <h3 class="display-5 font-weight-bold" style="font-size: 28pt;">Criar Hóspede</h3><hr> 
+   <!-- Submenu -->
+   <div class="d-flex mt-4 mb-3">
+      <div class="col-6">
+         <h4 class="display-5" style="font-size: 18pt;">QTD Hospedes: 11</h4>
+      </div>
+   </div>
 
-    <div class="container text-center mt-2 p-4">
-        <div class="row">
-        
-            <h1 class="display-5 font-weight-bold mb-3">Criar Hospede</h1>
-        </div>
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="container text-center formlogin w-50">
-                <form class=" p-4 rounded bg-transparent" action="{% url 'cadastros:criar_hospede' %}" method="POST">
-                    {% csrf_token %}
-                    <div class="text-start form-group">
-                        <label for="txtNome" class="form-label">Nome</label>
-                        <input type="text" id="txtNome" name="txtNome" placeholder="Insira seu email">
-                        <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
-                    </div>  
-                    <div class="text-start form-group">
-                        <label for="txtCpf" class="form-label">CPF</label>
-                        <input type="text" id="txtCpf" name="txtCpf" placeholder="Insira seu cpf">
-                        <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
-                    </div>  
-                    <div class="text-start form-group">
-                        <label for="txtTelefone" class="form-label">Telefone</label>
-                        <input type="text" id="txtTelefone" name="txtTelefone" placeholder="Insira seu email">
-                        <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
-                    </div>  
-                    <div class="text-start form-group">
-                        <label for="txtEmpresa" class="form-label">Empresa</label>
-                        <input type="text" id="txtEmpresa" name="txtEmpresa" placeholder="Insira seu email">
-                        <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100 gestorii-input shadow mt-2" >Entrar</button>
-                </form>
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+   <!-- Card de inserção na reserva -->
+   
+   <!-- <div class="d-flex border-top shadow border-2 border-primary pt-2 mb-5 rounded bg-body-tertiary"> -->
+   <div class="container border-top shadow border-2 border-warning pt-2 mb-5 rounded bg-body-tertiary">
+      <div class="row p-4">
+            <form action="{% url 'cadastros:criar_hospede' %}" method="POST">
+               {% csrf_token %}
+               <div class="row">
+                  <div class="col-8">
+                     <label for="txtNome" class="form-label">Nome</label>
+                     <input class="form-control shadow" type="text" id="txtNome" name="txtNome" placeholder="Insira seu nome">
+                     <!-- <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div> -->
+                  </div>
+                  <div class=""></div>
+               </div>
+               <div class="text-start form-group">
+                  <label for="txtNome" class="form-label">Nome</label>
+                  <input type="text" id="txtNome" name="txtNome" placeholder="Insira seu email">
+                  <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
+               </div>  
+               <div class="text-start form-group">
+                  <label for="txtCpf" class="form-label">CPF</label>
+                  <input type="text" id="txtCpf" name="txtCpf" placeholder="Insira seu cpf">
+                  <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
+               </div>  
+               <div class="text-start form-group">
+                  <label for="txtTelefone" class="form-label">Telefone</label>
+                  <input type="text" id="txtTelefone" name="txtTelefone" placeholder="Insira seu email">
+                  <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
+               </div>  
+               <div class="text-start form-group">
+                  <label for="txtEmpresa" class="form-label">Empresa</label>
+                  <input type="text" id="txtEmpresa" name="txtEmpresa" placeholder="Insira seu email">
+                  <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
+               </div>
+               <button type="submit" class="btn btn-primary w-100 gestorii-input shadow mt-2" >Salvar</button>
+            </form>
+      </div>
+   </div>
+</div>
 
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
             $(document).ready(function() {
                 $('#txtEmail').on('input', function() {
@@ -83,6 +91,10 @@
                     toastr.info('Se você esqueceu sua senha contate o administrador do sistema.');
                     window.location.href = "http://127.0.0.1:8000/novaSenha/";
                 });
+            });
+            var dropdownElements = document.querySelectorAll('.dropdown-toggle');
+            dropdownElements.forEach(function(dropdown) {
+               new bootstrap.Dropdown(dropdown);
             });
         </script>
         
