--- a/cadastros/templates/criar_reserva.html
+++ b/cadastros/templates/criar_reserva.html
@@ -1,121 +1,178 @@
 {% extends 'master.html' %}
 {% load static %}
 {% block conteudo %}
-
-    <div class="container mt-2 p-4">
-        <div class="row text-center">
-        
-            <h1 class="display-5 font-weight-bold mb-3">Criar Reserva</h1>
-        </div>
-         
-         <label class="switch">
-               Inserir novo hóspede
-            
-            <input type="checkbox" id="toggleButton">
-            <span class="slider"></span>
-         </label>
-        <div class="row mt-3 d-flex">
-                  <div class="row">
-                     <div class="col-9">
-                        <div class="row">
-                           <div class="col-8">
-                              <label for="txtNome" class="form-label">Nome:</label>
-                              <input type="text" class="form-control shadow" id="txtNome" value="">
-                           </div>
-                           <div class="col-4">
-                              <label for="txtTelefone" class="form-label">Telefone</label>
-                              <input type="text" class="form-control shadow" id="txtTelefone" value="">
-                           </div>
-                        </div>
-                        <div class="row">
-                           <div class="col-6">
-                              <label for="txtCpf" class="form-label mt-3">CPF:</label>
-                              <input type="text" class="form-control shadow" id="txtCpf" value="">
-                           </div>
-                           <div class="col-6">
-                              <label for="txtTelefone" class="form-label mt-3">Empresa</label>
-                              <input type="text" class="form-control shadow" id="txtTelefone" value="">
-                           </div>
-                        </div>
-                        <div class="row mt-3">
-                           <div class="col-6">
-                              <label for="dateCheckin" class="form-label">Check-in</label>
-                              <input name="dateCheckin" type="date" class="form-select shadow" id="dateCheckin" placeholder="Selecione uma data" value="">
-                           </div>
-                           <div class="col-6">
-                              <label for="dateCheckout" class="form-label">Check-out</label>
-                              <input name="dateCheckout" type="date" class="form-select shadow" id="dateCheckout" placeholder="Selecione uma data" value="">
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-3">
-                        <div class="text-white mt-3 mb-4 h-75 rounded azul">
-                           <!-- <div class="row">
-                           </div> -->
-                           <h1 class="display-5 font-bold text-center">Quarto: </h1>
-                           <hr>
-                           <div class="p-2 ">
-                              <fieldset>
-                                 <legend>Observações</legend>
-                                 <p class="m-4 justify-content-center"></p>
-                              </fieldset>
-                           </div>
-                        </div>
-                     </div>
+<div class="container pt-4">
+   <!-- Titulo -->
+   <h3 class="display-5 font-weight-bold" style="font-size: 28pt;">Criar Reservas</h3><hr> 
+   <div class="mt-4 mb-3">
+      <h4 class="display-5" style="font-size: 18pt;">ID de reserva em 2131</h4>
+   </div>
+   
+   <!-- Card de inserção na reserva -->
+   <div class="container border-top shadow border-2 border-warning pt-2 mb-5 rounded bg-body-tertiary">
+      <form action="{% url 'cadastros:criar_reserva' %}" method="POST">
+         {% csrf_token %}
+         <div class="row p-4">
+            <div class="col-9">
+               <div class="row">
+                  <div class="col-8">
+                     <label for="txtNomeReserva" class="form-label">Nome:</label>
+                     <input type="text" class="form-control shadow" name="txtNomeReserva" id="txtNomeReserva" value="" list="sugestoesNome" required>
+                     <datalist id="sugestoesNome">
+                     </datalist>
+                  </div>
+                  <div class="col-4">
+                     <label for="txtTelefoneReserva" class="form-label">Telefone</label>
+                     <input type="text" class="form-control shadow" name="txtTelefoneReserva" id="txtTelefoneReserva" value="">
                   </div>
                </div>
-        {% comment %} <div class="row mt-4 mb-5">
-            <p>Ainda não tem uma conta? <a href="#">Inscreva-se aqui</a></p>
-        </div> {% endcomment %}
-        {% include 'criar_reservas_table.html' %}
+               <div class="row">
+                  <div class="col-6">
+                     <label for="txtCpf" class="form-label mt-3">CPF:</label>
+                     <input type="text" class="form-control shadow" id="txtCpfReserva" name="txtCpfReserva" value="" list="sugestoesCpf" required>
+                     <datalist id="sugestoesCpf">
+                     </datalist>
+                  </div>
+                  <div class="col-6">
+                     <label for="txtEmpresaReserva" class="form-label mt-3">Empresa</label>
+                     <input type="text" class="form-control shadow" name="txtEmpresaReserva" id="txtEmpresaReserva" value="">
+                  </div>
+               </div>
+               <div class="row mt-3">
+                  <div class="col-6">
+                     <label for="dateCheckin" class="form-label">Check-in</label>
+                     <input name="dateCheckin" type="date" class="form-select shadow" id="dateCheckin" placeholder="Selecione uma data" value="">
+                  </div>
+                  <div class="col-6">
+                     <label for="dateCheckout" class="form-label">Check-out</label>
+                     <input name="dateCheckout" type="date" class="form-select shadow" id="dateCheckout" placeholder="Selecione uma data" value="">
+                  </div>
+               </div>
+            </div>
+            <div class="col-3">
+               <div class="text-white mt-3 mb-4 h-75 rounded azul">
+                  {% comment %} <h1 class="display-5 font-bold text-center">Quarto: </h1> {% endcomment %}
+                  <label for="num_quarto">Escolha o Quarto:</label>
+                     <select id="num_quarto" name="num_quarto">
+                        {% for quarto in quartos %}
+                           <option value="{{ quarto }}">{{ quarto }}</option>
+                        {% endfor %}
+                     </select>
+                  <hr>
+                  <div class="p-2">
+                     <fieldset>
+                        <legend>Observações</legend>
+                        <p class="m-4 justify-content-center"></p>
+                     </fieldset>
+                  </div>
+               </div>
+            </div>
+            <div  class="d-flex justify-content-end">
+               <button id="botaoSubmit" type="submit" class="btn btn-primary w-10 gestorii-input shadow mt-2">Cadastrar</button>
+            </div>
+         </div>
+      </form>
+   </div>
+</div>
         
-        <br>
-        <br>
-        <br>
-        <br>
+<script>
+   $(document).ready(function() {
+      var hospedesData = {};
+      var hospedeTelefone = {};
+      var hospedeEmpresa = {};
+      //---------------Completa Nome Reserva---------------
+      $("#txtNomeReserva").on("input", function(){
+         var hospede_nome = $(this).val();
+         if (hospede_nome.length < 2) return;
+         
+         $.ajax({
+            url: '{% url "cadastros:busca_hospede" %}',
+            data: {
+                  'hospede_nome': hospede_nome
+            },
+            success: function(data) {
+               console.log("Dados recebidos:", data);
 
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script>
-            $(document).ready(function() {
-               function filtra_nome_hospede(){
-                  let nome_hospede = $('#txtNome').val();
-                  $.ajax({
-                     url: '{% url "cadastros:busca_hospede" %}',
-                     data: {
-                        "nome_hospede": nome_hospede
-                     },
-                     success: function(data){
-                        $('#txtNome').value(data);
-                     }
+                  var datalist = $("#sugestoesNome");
+                  datalist.empty();  // Limpa as opções antigas
+                  hospedesData = {};
+                  $.each(data.hospedes, function(index, value) {
+                     datalist.append('<option value="' + value.nome + '">');
+                     hospedesData[value.nome] = value.cpf;
+                     hospedeTelefone[value.nome] = value.telefone;
+                     hospedeEmpresa[value.nome] = value.empresa;
                   });
-               }
-               $('#txtBuscaNome').on('input', function () {
-                  filtraDepartamentoPorNome();
-               });
-            });
-        </script>
-        
-    <!-- Carregando o statico do calendario -->
-    <script src="{% static "js/flatpickr.js" %}"></script>
-    <script>
-      // Seleciona o checkbox
-      const toggleButton = document.getElementById("toggleButton");
-      let aux = document.getElementById("piru")
-
-      // Adiciona um evento para capturar quando o botão for alterado
-      toggleButton.addEventListener('change', function() {
-         if (toggleButton.checked) {
-            console.log('O botão está ativado');
-            aux.removeAttribute("hidden");
-            // Aqui você pode executar algo quando o botão estiver ativado
-         } else {
-            console.log('O botão está desativado');
-            aux.setAttribute("hidden", true);
-            // Aqui você pode executar algo quando o botão estiver desativado
-         }
+            }
+         });
+         
       });
 
-    </script>
-        
-{% endblock %}    
+      $("#txtNomeReserva").on("change", function() {
+            // Preenche ou limpa
+         var nomeSelecionado = $(this).val();
+         if (hospedesData[nomeSelecionado].length > 0){
+            $("#txtCpfReserva").val(hospedesData[nomeSelecionado]);
+         }
+         if (hospedeTelefone[nomeSelecionado].length > 0){
+            $("#txtTelefoneReserva").val(hospedeTelefone[nomeSelecionado]);
+         }
+         if (hospedeEmpresa[nomeSelecionado].length > 0){
+            $("#txtEmpresaReserva").val(hospedeEmpresa[nomeSelecionado]);
+         }
+         
+      });
+
+      //---------------Completa CPF Reserva ---------------
+      
+      $("#txtCpfReserva").on("input", function(){
+         var hospede_cpf = $(this).val();
+         if (hospede_cpf.length < 2) return;
+         
+         $.ajax({
+            url: '{% url "cadastros:busca_hospede" %}',
+            data: {
+                  'hospede_cpf': hospede_cpf
+            },
+            success: function(data) {
+               console.log("Dados recebidos:", data);
+
+                  var datalist = $("#sugestoesCpf");
+                  datalist.empty();  // Limpa as opções antigas
+                  hospedesData = {};
+                  $.each(data.hospedes, function(index, value) {
+                     datalist.append('<option value="' + value.cpf + '">');
+                     hospedesData[value.cpf] = value.nome;
+                     hospedeTelefone[value.cpf] = value.telefone;
+                     hospedeEmpresa[value.cpf] = value.empresa;
+                     console.log(value.cpf);
+                  });
+            }
+         });
+         
+      });
+
+      $("#txtCpfReserva").on("change", function() {
+            // Preenche ou limpa
+         var cpfSelecionado = $(this).val();
+         if(hospedesData[cpfSelecionado].length > 0){
+            $("#txtNomeReserva").val(hospedesData[cpfSelecionado]);   
+         }
+         if(hospedeTelefone[cpfSelecionado].length > 0){
+            $("#txtTelefoneReserva").val(hospedeTelefone[cpfSelecionado]);
+         }
+         if(hospedeEmpresa[cpfSelecionado].length > 0){
+            $("#txtEmpresaReserva").val(hospedeEmpresa[cpfSelecionado]);
+         }
+      });
+   });
+   var dropdownElements = document.querySelectorAll('.dropdown-toggle');
+   dropdownElements.forEach(function(dropdown) {
+      new bootstrap.Dropdown(dropdown);
+   });
+   
+</script>
+
+<!-- Carregando o statico do calendário -->
+<script src="{% static 'js/flatpickr.js' %}"></script>
+
+{% endblock %}
