--- a/resources/static/css/style.css
+++ b/resources/static/css/style.css
@@ -2,6 +2,17 @@
     background-color: rgba(17, 17, 17, 0.736); /* Isso vai mudar o fundo da página para azul claro
     color: aliceblue;
 } */
+/* Imagem de fundo */
+.fundo-login {
+   background-image: url('{% static "img/DEST_FRANCE.jpg"%}');
+   background-position: center center, top right;
+   background-size: cover, auto;
+   background-repeat: no-repeat, repeat;
+   height: 100vh; /* Garantir que o fundo ocupe toda a altura da página */
+}
+
+/* Parte da logo */
+
 
 .logo{
     width: 158px; 
@@ -22,8 +33,14 @@
 .fade-in {
     opacity: 0;
     transform: translateY(0px);
-    transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
+.fade-in-modo-edicao{
+    opacity: 0;
+    transform: translateY(0px);
+    transition: opacity 1.0s ease-in-out, transform 1.0s ease-in-out;
+}
+
 .fade-in_sair {
     opacity: 0;
     transform: translateX(20px);
@@ -31,6 +48,10 @@
 }
 
 .fade-in.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+.fade-in-modo-edicao.show {
     opacity: 1;
     transform: translateY(0);
 }
@@ -53,6 +74,7 @@
 }
 .cartao-azul{
     background-color: rgb(80, 165, 255);
+    color: white;
     width: 100px;
     height: 150px;
     border-radius: 6px;
@@ -78,6 +100,9 @@
 
 .azul{
    background-color: rgb(80, 165, 255);
+}
+.input-amarelo{
+   background-color: rgb(232, 206, 115);
 }
 
 /* Estilizando o input do flatpickr */
@@ -124,55 +149,4 @@
    color: #fff;
 }
 
-/* ===================================================== */
-
-/* Estilizando o contêiner do switch */
-.switch {
-   position: relative;
-   display: inline-block;
-   width: 60px;
-   height: 34px;
-}
-
-/* Esconde o checkbox original */
-.switch input {
-   opacity: 0;
-   width: 0;
-   height: 0;
-}
-
-/* Estilizando o "slider" */
-.slider {
-   position: absolute;
-   cursor: pointer;
-   top: 0;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   background-color: #ccc;
-   transition: 0.4s;
-   border-radius: 34px;
-}
-
-/* A parte interna do slider (quando o botão está ativo) */
-.slider:before {
-   content: "";
-   position: absolute;
-   height: 26px;
-   width: 26px;
-   border-radius: 50%;
-   left: 4px;
-   bottom: 4px;
-   background-color: white;
-   transition: 0.4s;
-}
-
-/* Quando o input (checkbox) estiver marcado */
-input:checked + .slider {
-   background-color: #4CAF50; /* Cor quando ativado (verde) */
-}
-
-/* Desloca o "slider" quando o checkbox estiver marcado */
-input:checked + .slider:before {
-   transform: translateX(26px);
-}
+/* ====================================================================== */
