--- a/reservas/templates/reservas.html
+++ b/reservas/templates/reservas.html
@@ -7,7 +7,7 @@
    <!-- Submenu -->
    <div class="d-flex mt-4 mb-3">
       <div class="col-6">
-         <h4 class="display-5" style="font-size: 18pt;">QTD Hospedes: 11</h4>
+         <h4 class="display-5" style="font-size: 18pt;">Total de reservas: {{ total }}</h4>
       </div>
       <!-- Pesquisa -->
       <div class="col-6">
@@ -29,7 +29,7 @@
          </div>
       </div>
    </div>
-   <div id="index-table">
+   <div id="index-table" class="mt-3">
       {% include 'editar_reserva.html' %}
    </div>
 </div>
