--- a/autenticacao/templates/esqueci_senha.html
+++ b/autenticacao/templates/esqueci_senha.html
@@ -1,6 +1,57 @@
-<form id="formRecuperarSenha" method="post" action="{% url 'autenticacao:esqueci_senha' %}">
-    {% csrf_token %}
-    <label for="email">E-mail:</label>
-    <input type="email" id="email" name="email" required>
-    <button type="submit">Enviar</button>
-</form>
+{% extends 'master.html' %}
+{% load static %}
+{% block conteudo %}
+<div style="background-image: url('{% static 'img/DEST_FRANCE.jpg' %}');background-size: cover;">
+   <br>
+   <div class="container-fluid w-50 d-flex justify-content-center pt-5 mt-5">
+      
+      <form class=" form-control d-flex justify-content-center border-0 bg-transparent p-4" id="formRecuperarSenha" method="post" action="{% url 'autenticacao:esqueci_senha' %}">
+         <div class="w-50 rounded container-sm px-5 py-3 pb-5 border-top border-bottom" style="background-color: rgba(52, 52, 52, 0.193); backdrop-filter: blur(10px); color: white">
+            {% csrf_token %}
+            <div class="row p-3 form-group">
+              <h1 class="display-5 font-weight-bold text-center" style="font-size: 18pt;">Recuperar senha 🔧</h1><hr>
+               <label for="email" class="form-label px-1 pt-2 d-flex display-5 font-weight-bold" style="font-size: 11pt;">E-mail:</label>
+               <input class="form-control form-control-sm" type="email" id="email" name="email" required placeholder="Informe seu email">
+            </div>
+            <div class="row px-3 pt-2">
+               <button class="btn btn-sm btn-primary" type="submit">Enviar</button>
+            </div>
+         </div>
+      </form>
+   </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <footer id="rodape" class="text-light py-4" style="background:rgba(0, 0, 0, 0.855);">
+         <div class="container text-center">
+            <h5 class="fw-bold"><img src='{% static "img/Logo GestoriiHost Branca.png" %}'style="width: 150px;"> - Sistema de Gerenciamento de Hotelaria</h5>
+            
+            <!-- <button id="btnSobre" class="btn btn-outline-light btn-sm mt-2">Sobre</button> -->
+            
+            <p class="mt-3 mb-1">
+               Este sistema está licenciado sob 
+               <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+                  Licença Creative Commons &copy; 4.0
+               </a> 
+               <img src="{% static 'img/creativecommons.png' %}" width="45" alt="Creative Commons">
+            </p>
+            
+            <p class="mb-0">
+               Disponível para download em 
+               <a href="https://github.com/lur4n/gestoriihost" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+                  github.com/lur4n/gestoriihost
+               </a> 
+               <img src="{% static 'img/github.png' %}" width="18" alt="GitHub">
+            </p>
+         </div>
+      </footer>
+</div>
+
+
+{% endblock %}
