--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -2,66 +2,76 @@
 {% load static %}
 {% block conteudo %}
 
-<div class="fundo-login">
-
-
-   <div class="container text-center mt-2 p-4">
-      <div class="row">
-         <h1 class="display-5 font-weight-bold mb-3">Login</h1>
-         <p>Faça seu login para começar a gerenciar o Hotel!</p>
-      </div>
-      <div class="d-flex justify-content-center align-items-center mb-5">
-         <div class="container text-center formlogin w-50">
-            <form class=" p-4 rounded bg-transparent" action="{% url 'autenticacao:login' %}" method="POST">
-               {% csrf_token %}
-               <div class="text-start form-group">
-                  <label for="txtEmail" class="form-label">Nome</label>
-                  <input type="email" class="form-control border border-1 border-dark gestorii-input shadow" id="txtEmail" name="txtEmail" placeholder="Insira seu email">
-                  <div id="divEmailError" class="error-message mt-2 fade-in" style="font-size:10px; color:rgb(0, 217, 29);"> . </div>
-               </div>  
-               <div class="mb-5 text-start form-group hidden-group" id="divSenha">
-                  <label for="txtSenha" class="form-label">Senha</label>
-                  <input type="password" class="form-control border border-1 border-dark gestorii-input shadow" id="txtSenha" name="txtSenha" autocomplete="new-password">
+<!-- <div class="fundo-login"> -->
+<div class="" style="background-image: url('{% static 'img/DEST_FRANCE.jpg' %}');background-size: cover;">
+   <div class="container-fluid pt-5 mb-5">
+      <div class="d-flex justify-content-center align-items-center container-sm mt-5 mb-5 ">
+         <div class=" border-top border-bottom shadow rounded ">
+            <form class="shadow border-0 form-control p-5" style="background-color: rgba(52, 52, 52, 0.193); backdrop-filter: blur(10px); color: white; width: 400px;" action="{% url 'autenticacao:login' %}" method="POST">
+               <div class="w-100">
+                 {% csrf_token %}
+                 <div class="text-center form-group">
+                   <h1 class="display-5 font-weight-bold mb-3" style="font-size: 18pt;">Login</h1><hr>
+                 </div>
+                 <div class="form-group px-2">
+                   <label for="txtEmail" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Nome: </label>
+                   <input type="email" class="form-control form-control-sm shadow" id="txtEmail" name="txtEmail" placeholder="Insira seu email">
+                   <div id="divEmailError" class="error-message mt-2 fade-in display-5 font-weight-bold mb-1" style="font-size:12px;"> . </div>
+                 </div>
+                 <div class="form-group hidden-group px-2" id="divSenha">
+                   <label for="txtSenha" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Senha: </label>
+                   <input type="password" class="form-control form-control-sm shadow" id="txtSenha" name="txtSenha" autocomplete="new-password" placeholder="Insira sua senha">
+                 </div>
+                 <div class="hidden-group" hidden id="divPerfil">
+                   <label for="slcPerfil">Perfil</label>
+                   <select class="form-control " id="slcPerfil" name="slcPerfil"></select>
+                 </div>
+                 <div class="form-group hidden-group p-2" id="divSenha">
+                    <button type="submit" class="btn btn-sm btn-primary rounded w-100 gestorii-input shadow mb-2 mt-3">Entrar</button>
+                  </div>
+                 <div class="text-center form-group display-5 pb-2 font-weight-bold" style="font-size: 11pt;">
+                   Acho que <a href="{% url 'autenticacao:esqueci_senha' %}" style="color: yellow;"> esqueci minha senha😅</a>
+                 </div>
                </div>
-               <div class="mb-3 text-start form-group hidden-group" hidden id="divPerfil">
-                  <label for="slcPerfil">Perfil</label>
-                  <select class="form-control border border-1 border-dark gestorii-input shadow" id="slcPerfil" name="slcPerfil" required></select>
-               </div>
-               <button type="submit" class="btn btn-primary w-100 gestorii-input shadow mt-2" >Entrar</button>
-            </form>
+             </form>
          </div>
+        
       </div>
-      <a href="{% url 'autenticacao:esqueci_senha'%}">Esqueci a senha</a>
-   </div>
-   <footer id="rodape" class="text-light py-4 mt-5" style="background:rgb(66, 66, 66);">
+    </div>
+    
+   <br>
+   <br>
+   <br>
+   <br>
+   <footer id="rodape" class="text-light py-5" style="background:rgba(0, 0, 0, 0.855);">
       <div class="container text-center">
          <h5 class="fw-bold"><img src='{% static "img/Logo GestoriiHost Branca.png" %}'style="width: 150px;"> - Sistema de Gerenciamento de Hotelaria</h5>
          
          <!-- <button id="btnSobre" class="btn btn-outline-light btn-sm mt-2">Sobre</button> -->
-
+         
          <p class="mt-3 mb-1">
-               Este sistema está licenciado sob 
-               <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
-                  Licença Creative Commons &copy; 4.0
-               </a> 
-               <img src="{% static 'img/creativecommons.png' %}" width="45" alt="Creative Commons">
+            Este sistema está licenciado sob 
+            <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+               Licença Creative Commons &copy; 4.0
+            </a> 
+            <img src="{% static 'img/creativecommons.png' %}" width="45" alt="Creative Commons">
          </p>
-
+         
          <p class="mb-0">
-               Disponível para download em 
-               <a href="https://github.com/lur4n/gestoriihost" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
-                  github.com/lur4n/gestoriihost
-               </a> 
-               <img src="{% static 'img/github.png' %}" width="18" alt="GitHub">
+            Disponível para download em 
+            <a href="https://github.com/lur4n/gestoriihost" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+               github.com/lur4n/gestoriihost
+            </a> 
+            <img src="{% static 'img/github.png' %}" width="18" alt="GitHub">
          </p>
       </div>
    </footer>
 </div>
-
 <script>
    $(document).ready(function() {
          $('#txtEmail').on('input', function() {
             var email = $(this).val();
+            console.log(email)
             $('#divPerfil').addClass('hidden-group');
             $('#divSenha').addClass('hidden-group');
             $('#slcPerfil').empty();
@@ -80,12 +90,12 @@
                                  });
                                  $('#divPerfil').removeClass('hidden-group');
                                  $('#divSenha').removeClass('hidden-group');
-                                 $('#divEmailError').text('Email Disponível!').addClass('show').css('color','green');
+                                 $('#divEmailError').text('Email Disponível!').addClass('show').css('color','lawngreen');
                            } else {
                                  toastr.error("Nenhum perfil encontrado para este e-mail.", "Erro");
                            }
                         } else {
-                           $('#divEmailError').text('Email está indisponível').addClass('show').css('color','red');
+                           $('#divEmailError').text('Email está indisponível').addClass('show').css('color','orangered');
                         }
                      }
                });
