--- a/autenticacao/templates/recuperar_senha.html
+++ b/autenticacao/templates/recuperar_senha.html
@@ -1,8 +1,46 @@
-<h1>Redefinir Senha</h1>
-<form method="post">
-   {% csrf_token %}
-   <input type="hidden" name="token" value="{{ token }}">
-   <label for="senha">Nova Senha:</label>
-   <input type="password" id="senha" name="senha" required>
-   <button type="submit">Alterar Senha</button>
-</form>  
+{% extends 'master.html' %}
+{% load static %}
+{% block conteudo %}
+<div style="background-image: url('{% static 'img/DEST_FRANCE.jpg' %}'); background-size: cover;">
+   <br><br><br>
+   <div class="align-items-center container-sm  w-50 d-flex justify-content-center pt-5">
+      <form class="form-control d-flex border-0 p-4 border-bottom border-top rounded" id="formRecuperarSenha" method="POST" action="{% url 'autenticacao:recuperar_senha' token=token %}" style="background-color: rgba(52, 52, 52, 0.193); backdrop-filter: blur(10px); color: white; width: 400px;">
+         <div class="w-100 px-5 py-3 pb-5" >
+            {% csrf_token %}
+            <div class="p-3 form-group">
+               <h1 class="display-5 font-weight-bold text-center" style="font-size: 18pt;">Alterar senha 🔧</h1><hr>
+               <input type="hidden" name="token" value="{{ token }}" autocomplete="off">
+               <label for="senha" class="form-label px-1 pt-2 d-flex display-5 font-weight-bold" style="font-size: 11pt;">Nova Senha:</label>
+               <input class="form-control form-control-sm" type="password" id="senha" name="senha" placeholder="Informe sua nova senha" autocomplete="new-password">
+            </div>
+            <div class="text-center px-3 pt-2">
+               <button class="btn btn-sm btn-primary rounded w-100 gestorii-input shadow mb-2 mt-3" type="submit">Alterar Senha</button>
+            </div>
+         </div>
+      </form>
+   </div>
+   <br><br><br><br><br>
+   <br><br><br><br>
+   <footer id="rodape" class="text-light py-4" style="background: rgba(0, 0, 0, 0.855);">
+      <div class="container text-center">
+         <h5 class="fw-bold"><img src='{% static "img/Logo GestoriiHost Branca.png" %}' style="width: 150px;"> - Sistema de Gerenciamento de Hotelaria</h5>
+         <!-- <button id="btnSobre" class="btn btn-outline-light btn-sm mt-2">Sobre</button> -->
+         <p class="mt-3 mb-1">
+            Este sistema está licenciado sob 
+            <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+               Licença Creative Commons &copy; 4.0
+            </a> 
+            <img src="{% static 'img/creativecommons.png' %}" width="45" alt="Creative Commons">
+         </p>
+         <p class="mb-0">
+            Disponível para download em 
+            <a href="https://github.com/lur4n/gestoriihost" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+               github.com/lur4n/gestoriihost
+            </a> 
+            <img src="{% static 'img/github.png' %}" width="18" alt="GitHub">
+         </p>
+      </div>
+   </footer>
+</div>
+
+{% endblock %}
