--- a/cadastros/templates/criar_reserva.html
+++ b/cadastros/templates/criar_reserva.html
@@ -5,70 +5,68 @@
    <!-- Titulo -->
    <h3 class="display-5 font-weight-bold" style="font-size: 28pt;">Criar Reservas</h3><hr> 
    <div class="mt-4 mb-3">
-      <h4 class="display-5" style="font-size: 18pt;">ID de reserva em 2131</h4>
+      <h4 class="display-5" style="font-size: 18pt;">Quantidade de quartos disponíveis: {{total}}</h4>
    </div>
    
    <!-- Card de inserção na reserva -->
-   <div class="container border-top shadow border-2 border-warning pt-2 mb-5 rounded bg-body-tertiary">
+   <div class="container w-50 border-top shadow border-2 border-info pt-2 my-5 rounded">
       <form action="{% url 'cadastros:criar_reserva' %}" method="POST">
          {% csrf_token %}
          <div class="row p-4">
-            <div class="col-9">
+            <div class="col-8">
                <div class="row">
                   <div class="col-8">
-                     <label for="txtNomeReserva" class="form-label">Nome:</label>
-                     <input type="text" class="form-control shadow" name="txtNomeReserva" id="txtNomeReserva" value="" list="sugestoesNome" required>
+                     <label for="txtNomeReserva" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Hóspede:</label>
+                     <input type="text" class="form-control form-control-sm shadow" name="txtNomeReserva" id="txtNomeReserva" value="" list="sugestoesNome" required>
                      <datalist id="sugestoesNome">
                      </datalist>
                   </div>
                   <div class="col-4">
-                     <label for="txtTelefoneReserva" class="form-label">Telefone</label>
-                     <input type="text" class="form-control shadow" name="txtTelefoneReserva" id="txtTelefoneReserva" value="">
+                     <label for="txtTelefoneReserva" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Telefone:</label>
+                     <input type="text" class="form-control form-control-sm shadow" name="txtTelefoneReserva" id="txtTelefoneReserva" value="">
                   </div>
                </div>
                <div class="row">
                   <div class="col-6">
-                     <label for="txtCpf" class="form-label mt-3">CPF:</label>
-                     <input type="text" class="form-control shadow" id="txtCpfReserva" name="txtCpfReserva" value="" list="sugestoesCpf" required>
+                     <label for="txtCpf" class="form-label mt-3 display-5 font-weight-bold" style="font-size: 11pt;">CPF:</label>
+                     <input type="text" class="form-control form-control-sm shadow" id="txtCpfReserva" name="txtCpfReserva" value="" list="sugestoesCpf" required>
                      <datalist id="sugestoesCpf">
                      </datalist>
                   </div>
                   <div class="col-6">
-                     <label for="txtEmpresaReserva" class="form-label mt-3">Empresa</label>
-                     <input type="text" class="form-control shadow" name="txtEmpresaReserva" id="txtEmpresaReserva" value="">
+                     <label for="txtEmpresaReserva" class="form-label mt-3 display-5 font-weight-bold" style="font-size: 11pt;">Empresa:</label>
+                     <input type="text" class="form-control form-control-sm shadow" name="txtEmpresaReserva" id="txtEmpresaReserva" value="">
                   </div>
                </div>
                <div class="row mt-3">
                   <div class="col-6">
-                     <label for="dateCheckin" class="form-label">Check-in</label>
-                     <input name="dateCheckin" type="date" class="form-select shadow" id="dateCheckin" placeholder="Selecione uma data" value="">
+                     <label for="dateCheckin" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Check-in:</label>
+                     <input name="dateCheckin" type="date" class="form-control form-control-sm shadow" id="dateCheckin" >
                   </div>
                   <div class="col-6">
-                     <label for="dateCheckout" class="form-label">Check-out</label>
-                     <input name="dateCheckout" type="date" class="form-select shadow" id="dateCheckout" placeholder="Selecione uma data" value="">
+                     <label for="dateCheckout" class="form-label display-5 font-weight-bold" style="font-size: 11pt;">Check-out:</label>
+                     <input name="dateCheckout" type="date" class="form-control form-control-sm shadow" id="dateCheckout">
                   </div>
                </div>
             </div>
-            <div class="col-3">
-               <div class="text-white mt-3 mb-4 h-75 rounded azul">
-                  {% comment %} <h1 class="display-5 font-bold text-center">Quarto: </h1> {% endcomment %}
-                  <label for="num_quarto">Escolha o Quarto:</label>
-                     <select id="num_quarto" name="num_quarto">
+            <div class="col-4 pt-4">
+                  <div class="row text-white rounded azul text-center">
+                     <label for="num_quarto" class="form-label display-5 font-weight-bold" style="font-size: 20pt;">Quarto</label>
+                  </div>
+                  <div class="row rounded azul mt-2">
+                     <div class="container p-3 text-white">
+                     <label for="num_quarto" class="form-label display-5 font-weight-bold" style="font-size: 12pt;">Selecione um quarto:</label>
+                     <select id="num_quarto" name="num_quarto" class="form-control-sm form-control text-center bg-transparent shadow border-0 display-5 text-white">
                         {% for quarto in quartos %}
-                           <option value="{{ quarto }}">{{ quarto }}</option>
+                           <option value="{{ quarto }}" class="display-5 text-dark" style="font-size: 12pt;">{{ quarto }}</option>
                         {% endfor %}
                      </select>
-                  <hr>
-                  <div class="p-2">
-                     <fieldset>
-                        <legend>Observações</legend>
-                        <p class="m-4 justify-content-center"></p>
-                     </fieldset>
+                     </div>
                   </div>
                </div>
             </div>
-            <div  class="d-flex justify-content-end">
-               <button id="botaoSubmit" type="submit" class="btn btn-primary w-10 gestorii-input shadow mt-2">Cadastrar</button>
+            <div  class="d-flex pb-4 justify-content-end">
+               <button id="botaoSubmit" type="submit" class="btn btn-primary btn-sm gestorii-input rounded shadow mt-2">Cadastrar</button>
             </div>
          </div>
       </form>
