--- a/cadastros/templates/editar_hospede.html
+++ b/cadastros/templates/editar_hospede.html
@@ -5,7 +5,7 @@
    <!-- Titulo -->
    <h3 class="display-5 font-weight-bold" style="font-size: 28pt;">Hóspedes</h3><hr> 
    <div class="mt-1 mb-1">
-      <h4 class="display-5" style="font-size: 18pt;">Quantidade de Hóspedes: x</h4>
+      <h4 class="display-5" style="font-size: 18pt;">Quantidade de Hóspedes: </h4>
    </div>
    <div class="text-center">
       <table class="table table-hover striped">
