--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -1,13 +1,12 @@
 {% extends 'master.html' %}
 {% load static %}
 {% block conteudo %}
-<!-- Titulo -->
 <div class="container pt-4">
-   <!-- <h1 class="display-5 font-weight-bold">Olá, {{ request.session.nome }}</h1><hr>  -->
-   <h3 class="display-5 font-weight-bold" style="font-size: 28pt;">Olá, {{ request.session.nome }}</h3><hr> 
+   <!-- Titulo -->
+   <h3 class="display-5 font-weight-bold">Olá, {{ request.session.nome }}</h3><hr> 
 
 
-   <div class="container ">
+   <div class="container">
       <div class="row mt-5 mb-5 ">
          <div class="d-flex justify-content-end">
             <div class="col-1 ms-4 me-1 legenda-cartao-verde"></div>
