--- a/resources/static/css/style.css
+++ b/resources/static/css/style.css
@@ -67,12 +67,13 @@
     border-radius: 6px;
 }
 .cartao-verde{
-    background-color: rgb(80, 255, 133);
-    width: 100px;
-    height: 150px;
-    border-radius: 6px;
+   background-color: rgb(80, 255, 133);
+   width: 100px;
+   height: 150px;
+   border-radius: 6px;
 }
 .cartao-azul{
+   backdrop-filter: blur(10px);
     background-color: rgb(80, 165, 255);
     color: white;
     width: 100px;
