--- a/reservas/templates/reservas.html
+++ b/reservas/templates/reservas.html
@@ -56,6 +56,7 @@
 
                btnSalvar.addEventListener("click", function () {
                   var dataId = $(this).data('id');
+                  console.log(dataId)
                   altera_reserva(dataId)
                });
 
